--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,27 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+   width: 100%;
+  height: 100%;
+    background: #fbfbfb;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+
+text{
+  font-family: Arial;
+  font-size: 22px;
+}
+h2, .flow-text{
+  margin: 0 0 10px;
+}
+.modal{
+  max-width:700px;
+}
+.canvas{
+  margin-top: 40px;
 }
